# spotisort

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: PROJECT_SPEC.md
src/spotisort/: __init__.py  __main__.py  config.py
src/spotisort/api/: __init__.py  client.py  exceptions.py
src/spotisort/cache/: __init__.py  artist_cache.py  database.py  library_cache.py  serialization.py
src/spotisort/classification/: __init__.py  base.py  genre.py  taxonomy.py
src/spotisort/cli/: __init__.py  app.py
src/spotisort/mapping/: __init__.py  mappers.py
src/spotisort/models/: __init__.py  album.py  artist.py  playlist.py  track.py
src/spotisort/repositories/: __init__.py  artists.py  base.py  cached.py  liked_songs.py  playlists.py  protocols.py
src/spotisort/services/: __init__.py  grouping.py  library.py  operations.py  playlists.py
tests/: __init__.py  conftest.py  test_cache.py  test_classification.py  test_cli.py  test_config.py  test_grouping.py  test_mappers.py  test_repositories.py  test_services.py
