[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotisort"
version = "0.1.0"
description = "A long-term, production-grade Spotify library organiser built on the Spotify Web API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Luke Dinsdale", email = "lukedinsdale43@gmail.com" }]
keywords = ["spotify", "spotipy", "music", "library", "playlists", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "spotipy>=2.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/lookdnr/spotisort"
Repository = "https://github.com/lookdnr/spotisort"

[project.scripts]
spotisort = "spotisort.cli.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["spotisort"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]

# Spotipy ships without type stubs; allow importing it without complaints.
[[tool.mypy.overrides]]
module = ["spotipy.*"]
ignore_missing_imports = true

# Tests intentionally inject structural fakes (duck-typed stand-ins) into the
# concrete services/repositories, so the precise-type "arg-type" check is noise
# there. Everything else stays strict.
[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["arg-type"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["spotisort"]

[tool.coverage.report]
show_missing = true
skip_covered = true
